# jrpc20

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  go.mod  go.sum  pmapp.go
pmconfig/: pmconfig.go  pmconfig.go.in
pmdaemon/: daemon.go
pmlog/: pmlog.go
pmtools/: array.go  random.go  time.go  uuid.go
